Remove explore-by-example, mysql, and cassandra